tests/invalid/undefined_variable/main.py
def run_case() -> None:
    x: int = undefined_var + 1

if __name__ == "__main__":
    run_case()
